# ukrcomponent-drive-copy

./: .gitignore  UC_history_inventory.csv.bak  UC_mova_inventory.csv  folders.csv  pyproject.toml  run.ipynb  to_pdf.ipynb  tools.py  ukrcomponent.py
