[project]
name = "ukrcomponent-uploader"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.179.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "lxml>=6.0.1",
    "pandas>=2.3.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ipython>=9.4.0",
]
