[project]
name = "ukrcomponent-uploader"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "docx2pdf>=0.1.8",
    "google-api-python-client>=2.179.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "ipywidgets>=8.1.7",
    "lxml>=6.0.1",
    "pandas>=2.3.2",
    "pptxtopdf>=0.0.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ipython>=9.4.0",
    "selenium>=4.37.0",
]
